# orka.py

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  STRATEGY.md  bench_slrq_rvq.py  handoff.md  orka.py  orka_entry_kaggle.py  orka_entry_template.py  orka_test.py  pareto_bench.py  prompts.txt  pyproject.toml  run_aggressive_sweep.sh  run_e2e_pipeline.sh  run_emaq_matrix.sh  run_intelligence_eval.sh  run_metrics_validation.sh  run_nanowhale_crusher.sh  run_openmoe_final.sh  run_optimized_emaq_matrix.sh  run_pillar_proof.sh  run_pythia_granular.sh  run_pythia_highres_vector.sh  run_pythia_hybrid.sh  run_pythia_intelligence.sh  run_qwen.sh  run_qwen_baseline_full.sh  run_qwen_final_boss.sh  run_qwen_intelligence.sh  run_qwen_pure_orka.sh  run_qwen_tristage.sh  run_real_world.sh  run_rvq_mixed_smol.sh  run_tristage_proof.sh  run_ultimate.sh  slrq_backup.py  summary.md  (+14 more)
.agents/: AGENTS.md
.github/workflows/: ci.yml
_legacy/: bench_real_model.py  hadamard_smollm_test.py  hadamard_smollm_v2.py  improve_bench.py  pack_qwen3_3bpw.py  run_eval.py  slrq_real_bench.py
deploy/kaggle/: dataset-metadata.json  kernel-metadata-ornith.json  kernel-metadata-qat-hi05b.json  kernel-metadata.json  kernel-qat-135-metadata.json  kernel-qat-metadata.json  kernel-qat-supra-metadata.json  orka_ornith9b_kaggle.py  orka_qat_135_kaggle.py  orka_qat_hi05b_kaggle.py  orka_qat_kaggle.py  orka_qat_supra_kaggle.py  orka_smol_kaggle.py  push.sh  push_ornith.sh  push_qat.sh
deploy/modal/: orka_modal.py
docs/: ARCHITECTURE.md  ORKA.md  RESEARCH.md
docs/design/: per-tensor-transform-search.md  rvq-llama-cpp-type.md
docs/plans/: 2026-05-01-slrq-refactor.md
docs/research/: 2026-06-falconh1-0.5b-frontier.md  2026-06-lattice-trellis-compression.md  2026-06-sub4bit-at-scale.md  2026-06-validation-vs-papers.md
kernel/: Makefile  README.md  dump_tensor.py  ggml_orka_op.c  orka_vq.c  orka_vq.h  run_ggml_proof.sh  test_orka_vq.c  verify_kernel.py
orka/: __init__.py  __main__.py  _checkpoint.py  _format.py  _impl.py  _runtime.py  _tensor.py  _util.py  activations.py  allocate.py  cli.py  compensation.py  config.py  core.py  correct.py  decode.py  distill.py  eval.py  export.py  export_gguf.py  hf.py  hf_quantizer.py  io_format.py  kaggle.py  kmeans.py  layers.py  merge.py  metrics.py  pack.py  qat.py  qat_train.py  quant_spec.py  reconstruct.py  report.py  slrq.py  sweep.py  transforms.py  verify.py  vllm_quant.py
orka/_runtime/: __init__.py  device.py  io.py  limits.py
orka/artifact/: correct.py  export.py  export_gguf.py  merge.py  reconstruct.py
orka/autoquant/: escalation.py  (+9 more)
research/: distance_bench.py  slrq_bench.py
scripts/: bench_compare.py  bench_qwen.py  export_gguf_llama.py  export_gguf_llamacpp.py  export_gguf_llamacpp_qwen3.py  run_qwen.sh  run_real_world.sh  run_ultimate.sh  test_baseline.sh  test_joint_opt.sh  test_model.json  test_native_slrq.sh
speed/: bench_results.json
stress_artifact/: manifest.json
test_artifact/: manifest.json
tests/: test_allocate.py  test_ans.py  test_arch.py  test_assign_chunking.py  test_bitpack.py  test_block_scale_underflow.py  test_build_vq_linear.py  test_channel_block_max.py  test_codemode_followups.py  test_compensation.py  test_config.py  test_correct.py  test_correction_persistence.py  test_decode_inverse.py  test_default_hessian.py  test_det_segment_sum.py  test_device_auto_calibration.py  test_distill.py  test_emaq_giant_gate.py  test_error_comp_skip.py  test_eval.py  test_export.py  test_export_gguf.py  test_format_v2.py  test_gguf_roundtrip.py  test_giant_block_accumulate.py  test_giant_gate.py  test_golden_oracle.py  test_hessian_weighting.py  test_hf_loader.py  test_hf_quantizer.py  test_import_hygiene.py  test_index_planes.py  test_int8_codebook.py  test_keep_head_fp16.py  test_kernel.py  test_kmeans.py  test_lattice.py  test_lattice_pack.py  test_layers.py  (+18 more)
tools/: orka_parallel.py  orka_to_gguf.py  run_gguf_comparison.py  to_gguf_prep.py  verify_gguf.py
(+149 files in other folders)
