[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orka-compiler"
version = "0.1.0"
description = "Vector-quantization compiler for large language model weights"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Orkait" }]
keywords = ["quantization", "compression", "llm", "vector-quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
torch = ["torch>=2.1", "triton>=2.1; platform_system == 'Linux'"]
hf = ["transformers>=4.40", "safetensors>=0.4", "huggingface_hub>=0.23", "datasets>=2.19"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
orka = "orka.cli:main"

[project.urls]
Homepage = "https://github.com/orkait/orka-compiler"
Source = "https://github.com/orkait/orka-compiler"

[tool.hatch.build.targets.wheel]
packages = ["orka"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "llama.cpp", "ui", "deploy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
