[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orka-compiler"
version = "0.1.0"
description = "Vector-quantization compiler for large language model weights"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Orkait" }]
keywords = ["quantization", "compression", "llm", "vector-quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The numpy backend is the deterministic reference path and must install without
# torch. It is not numpy-only: tqdm is imported unconditionally by both k-means
# backends, safetensors reads the primary model format and writes passthrough
# tensors, and psutil backs the RAM cap that --max-system-ram-gb requires.
dependencies = [
    "numpy>=1.24",
    "tqdm>=4.65",
    "safetensors>=0.4",
    "psutil>=5.9",
]

[project.optional-dependencies]
torch = ["torch>=2.1", "triton>=2.1; platform_system == 'Linux'"]
hf = ["transformers>=4.40", "huggingface_hub>=0.23", "datasets>=2.19"]
dev = ["pytest>=8.0", "ruff>=0.6", "pre-commit>=3.7"]

[project.scripts]
orka = "orka.cli:main"

[project.urls]
Homepage = "https://github.com/orkait/orka-compiler"
Source = "https://github.com/orkait/orka-compiler"

[tool.hatch.build.targets.wheel]
packages = ["orka"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "llama.cpp", "ui", "deploy"]

[tool.ruff.lint]
# E4 import placement, E9 syntax errors, F pyflakes, I import order, UP modernization.
# Stylistic E7 rules and flake8-bugbear are not enforced yet; see `ignore` below.
select = ["E4", "E9", "F", "I", "UP"]
ignore = [
    "E501",  # line length is not enforced
    "F841",  # unused locals: ~21 legacy sites, some assign from a side-effecting call
]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files re-export names, and the back-compat root shims star-import them.
"__init__.py" = ["F401", "F403"]
"orka/*.py" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
